# TrackletViz

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  SYSTEM.md
backend/: pyproject.toml
backend/api/: main.py
backend/api/routes/: global_clips.py  search.py  stream.py  tracklets.py  videos.py
backend/config/: default.yaml
backend/indexer/: checkpoint.py  clustering.py  config.py  detector.py  embeddings.py  global_clips.py  main.py  mllm.py  speed.py  storage.py  thumbnails.py  trajectory.py
backend/models/: schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/EmbeddingsPanel/: EmbeddingsPanel.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/RightPanel/: RightPanel.tsx
frontend/src/components/RightPanel/tabs/: ClusterSummariesTab.tsx  GlobalClusterTab.tsx  GlobalHeatmapTab.tsx  GlobalSearchTab.tsx  GlobalSummarizationsTab.tsx  GlobalVideoTab.tsx  HeatmapTab.tsx  TextSearchTab.tsx  TrackListTab.tsx  VideoPlayerTab.tsx
frontend/src/components/RightPanel/tabs/summarizations/: BasicSubTab.tsx  SpatialSubTab.tsx  TemporalSubTab.tsx
frontend/src/components/shared/: LazyThumbnail.tsx
frontend/src/hooks/: useGlobalClips.ts  useTracklets.ts  useVideoMetadata.ts  useVideos.ts
frontend/src/lib/: api.ts  colors.ts  utils.ts
frontend/src/stores/: useStore.ts
frontend/src/types/: index.ts
frontend/src/workers/: heatmap.worker.ts
